--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,8 @@
     <%= csrf_meta_tags %>
     <%= stylesheet_link_tag  'application', media: 'all' %>
     <%= javascript_include_tag 'application' %>
-
+    <link rel="stylesheet" href="css/foundation.css" />
+    
   </head>
   <body>
     <div class="top bar">
